Keep the returned ids in the order Discord sent them
The compact constructor added last commit ran `returned` through Set.copyOf
under a comment claiming copyOf preserves iteration order. It does not: the set
it returns iterates in an unspecified order randomised per JVM run from an
internal salt, exactly so nothing can depend on it. The LinkedHashSet built in
read(), with its own comment about insertion order, was discarded one line
later.

Three things rested on the claim — the unlistedIds stream, the CoverCounts
javadoc saying "in the order it returned them", and namedIds printing the first
ten and counting the rest. With more than ten unlisted events, which ten a
caller was handed to act on was arbitrary and could differ between processes,
on the one clause this branch deliberately made name ids instead of counting
them.

`returned` keeps its order the long way round now. described and
recurrenceFailed stay on copyOf: nothing iterates them.

Both new assertions use containsExactly and both fail against the old line —
checked three runs, since five ids leave a 1-in-120 accidental pass and the
existing multi-element assertions were all containsExactlyInAnyOrder, which is
why nothing caught this.